# claude-ops

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-12-claude-ops.md  2026-03-16-living-console.md  2026-03-16-terminal-session-stability.md
docs/superpowers/specs/: 2026-03-12-claude-ops-design.md  2026-03-16-living-console-design.md
src/claude_ops/: __init__.py  __main__.py  app.py  parser.py  resources.py  server.py  watcher.py
src/claude_ops/static/: index.html  lcars.css  lcars.js
tests/: test_parser.py  test_parser_cache.py  test_resources.py  test_server.py  test_terminal_stability.js  test_watcher.py
tests/fixtures/: session.jsonl
tests/fixtures/subagents/: agent-test123.jsonl
